kubernetes/clusters/main/home-automation/home-assistant/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: home-assistant
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  egress:
    # emqx
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: emqx
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
    # music-assistant
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: music-assistant
      toPorts:
        - ports:
            - port: "8095"
              protocol: TCP
    # ser2net
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ser2net
      toPorts:
        - ports:
            - port: "3334"
              protocol: TCP
    # tidbyt-proxy
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tidbyt-proxy
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # zwave-js-ui
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: zwave-js-ui
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
